objects/TILBP__TI_Certificate__c.object
<CustomObject>
    <fields>
        <fullName>TILBP__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TI Certificates</relationshipLabel>
        <relationshipName>TI_Certificates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TILBP__ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TILBP__IssueDate__c</fullName>
        <label>Issue Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TILBP__ProgressWasReset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Progress Was Reset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TILBP__TI_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>TI ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TILBP__TI_SFContent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TI Content</label>
        <referenceTo>TILBP__TI_Content__c</referenceTo>
        <relationshipLabel>TI Certificates</relationshipLabel>
        <relationshipName>TI_Certificates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TILBP__URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>TI Certificate</label>
    <nameField>
        <displayFormat>TICT-{0000000}</displayFormat>
        <label>TI Certificate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TI Certificates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>